--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+/coverage.data
+/coverage/
 
 # Flutter/Dart/Pub related
 **/doc/api/
@@ -29,6 +31,7 @@
 .pub-cache/
 .pub/
 build/
+
 
 # Android related
 **/android/**/gradle-wrapper.jar
