refactor(lint): add lint rules to the package

--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,5 +1,6 @@
-include: package:flutter_lints/flutter.yaml
+include: package:lint/analysis_options.yaml
 
 linter:
-
   rules:
+    public_member_api_docs: true
+    sort_pub_dependencies: false
