--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,16 +4,15 @@ version: 0.5.3
 homepage: https://github.com/credifit-br/brazilian_banks
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
-  flutter: ">=3.0.3"
+  sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
-  http: ">=0.13.1 <1.0.0"
+  http: ^1.1.0
   flutter:
     sdk: flutter
 
 dev_dependencies:
-  lints: ^1.0.1
+  lints: ^3.0.0
   flutter_test:
     sdk: flutter
 
